# dbt-demo

./: .pre-commit-config.yaml  README.md  package-lock.yml  pyproject.toml
models/sources/: sources.yml
models/staging/: staging.yml
