[tool.poetry]
name = "dbt-demo"
version = "0.1.0"
description = ""
authors = ["Matthias Niehoff <matthias.niehoff@codecentric.de>"]
readme = "README.md"
packages = [{include = "dbt_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
dbt-postgres = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
sqlfluff = "^3.2.4"
sqlfluff-templater-dbt = "^3.2.4"
ruff = "^0.7.1"
elementary-data = "^0.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
